# insonia-v2

./: .pre-commit-config.yaml  DockerFile.yml  FIXES_GUIDE.md  IMPL_GUIDE.md  README.md  ROADMAP.md  docker-compose.yml  main.py  pyproject.toml
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
app/: main.py
app/core/: auth.py  config.py  database.py
app/graphql/: inputs.py  mutations.py  queries.py  schema.py  types.py
app/models/: __init__.py  brand.py  category.py  mixins.py  product.py  sale.py  user.py  variation.py
app/routers/: auth_rate_limit.py  images.py
app/schemas/: user.py
app/services/: sale.py  stock.py
insonia-frontend/: README.md  SKILL.md
insonia-frontend/insonia-design-system/vite-export/: index.html  package-lock.json  package.json
insonia-frontend/preview/: _card.css  brand-icons.html  brand-logo.html  colors-neutrals.html  colors-primary.html  colors-semantic.html  components-badges.html  components-buttons.html  components-inputs.html  components-product-card.html  components-table.html  radii.html  shadows.html  spacing-scale.html  type-body.html  type-mono.html  type-scale.html
insonia-frontend/ui_kits/insonia_app/: Dashboard.jsx  Historico.jsx  PDV.jsx  Produtos.jsx  README.md  Screens.jsx  Sidebar.jsx  api.js  app.css  data.js  index.html
insonia-frontend/ui_kits/insonia_store/: Cart.jsx  (+8 more)
tests/: conftest.py  test_aggregation_queries.py  test_auth.py  test_e2e_pdv.py  test_graphql_mutations.py  test_sale_service.py  test_stock.py  test_variations.py
(+22 files in other folders)
