[project]
name = "insonia-v2"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "fastapi>=0.136.1",
    "fastapi-users[sqlalchemy]>=12.1.3",
    "psycopg>=3.3.3",
    "pydantic>=2.13.3",
    "python-decouple>=3.8",
    "python-slugify>=8.0.4",
    "sqlalchemy>=2.0.49",
    "strawberry-graphql[fastapi]>=0.314.3",
    "uvicorn[standard]>=0.46.0",
]
[tool.pylint.messages_control]
disable = ["no-member"]